Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1900

The script extension does not build on Windows

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.13.0
    • None

    Description

      If you run cmake with -DENABLE_SCRIPTING=ON on Windows, it fails when it tries to apply a patch, because of line ending differences:

      patching file 'C:/Users/Ferenc Gerlits/src/minifi2/build/_deps/sol2//sol/sol.hpp'
      Hunk #1 FAILED at 9746 (different line endings).
      1 out of 1 hunk FAILED -- saving rejects to file 'C:/Users/Ferenc Gerlits/src/minifi2/build/_deps/sol2//sol/sol.hpp.rej'
      CMake Error at cmake/Sol2.cmake:35 (message):
        Failed to patch sol.hpp
      Call Stack (most recent call first):
        extensions/script/CMakeLists.txt:24 (include)
      

      TODO:
      1. Fix this.
      2. Check if there are other issues.
      3. Fix those.

      Attachments

        Issue Links

          Activity

            People

              fgerlits Ferenc Gerlits
              fgerlits Ferenc Gerlits
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m