MINIFICPP-1900_Fix-the-script-extension-on-Windows

- Fix compile errors:
	* do the sol2 patch in binary mode
	* put gcc-specific pragmas and attributes in #def's
	* undef COMPILER as some include #defines COMPILER as the compiler version
	* fix the usual Windows filesystem::path -> string stuff
- Fix some warnings
- Enable the script extension in the Windows CI build
- Set up Python in the Windows CI job
- Fix the unit tests